--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -1,1 +1,21 @@
-@import "tailwindcss";
+@import 'tailwindcss';
+
+.otp-wrapper {
+    @apply space-y-2;
+    @apply grid grid-cols-[--cols-default] gap-2;
+    --cols-default: repeat(1, minmax(0, 1fr));
+}
+
+.otp-cells-group {
+    @apply flex gap-3 justify-center items-center;
+}
+
+.otp-cell {
+    @apply px-0 py-2 mx-auto my-2 w-80 text-center;
+    @apply p-4 w-24 h-14 text-3xl font-extrabold text-center rounded-md border border-transparent;
+    @apply appearance-none outline-none focus:ring-2;
+    /* @apply dark:text-slate-200 dark:bg-slate-700 dark:hover:border-slate-500;
+        @apply text-slate-900 bg-slate-300 hover:bg-slate-400;
+        @apply focus:bg-slate-200 focus:border-indigo-400  focus:ring-indigo-100;
+        @apply dark:focus:bg-slate-500 dark:focus:border-indigo-800 dark:focus:ring-indigo-700; */
+}
